BUGFIX Page should scroll on Safari desktop

--- a/css/base.css
+++ b/css/base.css
@@ -4,7 +4,6 @@ html, body {
 
 html {
     font: normal 100% Helvetica, Arial, sans-serf;
-    overflow: hidden;
 }
 
 body {
